# Equivariant_CVNN

./: .gitignore  README.md  config.yml  mypy.ini  pyproject.toml  pytest.ini  submit-slurm.py
checkpoints/saved_cvnn_aps/: config.yml  summary.txt
checkpoints/saved_cvnn_lpf/: config.yml  summary.txt
checkpoints/saved_cvnn_lps_mlp/: config.yml  summary.txt
checkpoints/saved_cvnn_lps_mod/: config.yml  summary.txt
checkpoints/saved_cvnn_lps_poly/: config.yml  summary.txt
checkpoints/saved_cvnn_strided/: config.yml  summary.txt
checkpoints/saved_rvnn_aps/: config.yml  summary.txt
checkpoints/saved_rvnn_lpf/: config.yml  summary.txt
checkpoints/saved_rvnn_lps/: config.yml  summary.txt
checkpoints/saved_rvnn_strided/: config.yml  summary.txt
configs/: config.yaml  config_polsf.yml  config_polsf_cvnn_mlp_lps.yml  config_polsf_cvnn_mod_aps.yml  config_polsf_cvnn_mod_lpf.yml  config_polsf_cvnn_mod_lps.yml  config_polsf_cvnn_mod_maxpool.yml  config_polsf_cvnn_mod_stride.yml  config_polsf_cvnn_poly_lps.yml  config_polsf_cvnn_softmaxmean_aps.yml  config_polsf_cvnn_softmaxmean_lpf.yml  config_polsf_cvnn_softmaxmean_maxpool.yml  config_polsf_cvnn_softmaxmean_stride.yml  config_polsf_rvnn_aps.yml  config_polsf_rvnn_lpf.yml  config_polsf_rvnn_lps.yml
configs/polsf/: config_polsf.yml  config_polsf_cvnn_aps.yml  config_polsf_cvnn_aps_f.yml  config_polsf_cvnn_aps_f_new.yml  (+35 more)
docs/: PolSF.md  S1SLC.md
projects/: __init__.py
src/: get_metrics.py
torchtmpl/: data.py  datasets.py  losses.py  main.py  optim.py  transforms.py  utils.py  visualisation.py
(+135 files in other folders)
