[tool.poetry]
name = "cvnn"
version = "0.1.0"
description = ""
authors = ["Quentin GABOT <quentingabot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchcvnn = "^0.9.5"
matplotlib = "^3.10.3"
click = "^8.1.8"
wandb = "^0.19.11"
ipykernel = "^6.29.5"
torchinfo = "^1.8.0"
scikit-image = "^0.25.2"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
nbformat = "^5.10.4"
pyqt6 = "^6.9.0"
numba = "^0.61.2"
iterative-stratification = "^0.1.9"
fvcore = "^0.1.5.post20221221"
torchmetrics = "^1.8.2"
torch-fidelity = "^0.3.0"
umap-learn = "^0.5.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^23.9.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.5.1"
types-pyyaml = "^6.0.12.20250822"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
  { include = "cvnn", from = "src" }
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.poetry.scripts]
cvnn = "cvnn.cli:cli_main"
